--- a/lista-de-exercicios-3/indexFFXV.html
+++ b/lista-de-exercicios-3/indexFFXV.html
@@ -1,3 +1,13 @@
+<!--
+
+4. CSS Básico e Box Model - Crie um arquivo styles.css e vincule-o em
+index.html:
+- Defina cores de fundo (background-color) e de texto (color) para <header>,
+<main> e <footer>.
+- Para cada uma dessas seções, aplique margin, padding e border de forma a
+evidenciar seus contornos.
+
+-->
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -5,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Fantasy XV</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -19,6 +29,8 @@
             <h2>Sobre o Jogo</h2>
             <p>Final Fantasy XV é um RPG de ação que segue a jornada de Noctis Lucis Caelum, príncipe do reino de Lucis,
                 e seus companheiros em uma aventura épica pelo mundo de Eos.</p>
+            <p class="destaque">Este jogo revolucionou a franquia Final Fantasy com seu sistema de combate em tempo real
+                e mundo aberto.</p>
         </section>
 
         <section>
@@ -35,6 +47,8 @@
             <h2>Características do Jogo</h2>
             <p>O jogo apresenta um mundo aberto vasto, combate em tempo real, sistema de magia única e uma trilha sonora
                 épica composta por Yoko Shimomura.</p>
+            <p id="importante">Importante: Final Fantasy XV foi desenvolvido durante mais de 10 anos e representa um
+                marco na evolução da série, sendo considerado um dos jogos mais ambiciosos da Square Enix.</p>
         </section>
     </main>
 
